--- a/html/about-us/history.html
+++ b/html/about-us/history.html
@@ -41,7 +41,7 @@
     <!-- [E] header -->
 
     <div class="contents sub">
-        <section class="sub_cont sub_title">                       
+        <section class="sub_cont sub_title" data-aos="fade" data-aos-duration="2000">             
             <div class="breadcrumbs" role="navigation">
                 <ol>
                     <li>
@@ -64,7 +64,7 @@
             <div class="slide">
                 <div class="slide_item"> 
                     <div class="slide_img">
-                        <img src="../../resources/img/sub/img_history_slide1.jpg">
+                        <img src="../../resources/img/sub/img_history_slide1.jpg" alt="2003 沿革 image" title="2003 沿革 image">
                         <span class="num">2003</span>
                     </div>
                     
@@ -72,28 +72,28 @@
                 </div>
                 <div class="slide_item">
                     <div class="slide_img">
-                        <img src="../../resources/img/sub/img_history_slide2.jpg">
+                        <img src="../../resources/img/sub/img_history_slide2.jpg" alt="1998 沿革 image" title="1998 沿革 image">
                         <span class="num">1998</span>
                     </div>
                     <div class="info">日本サムスン発足 <br>(日本橋に拠点集約）</div>
                 </div>
                 <div class="slide_item"> 
                     <div class="slide_img">
-                        <img src="../../resources/img/sub/img_history_slide3.jpg">
+                        <img src="../../resources/img/sub/img_history_slide3.jpg" alt="1989 沿革 image" title="1989 沿革 image">
                         <span class="num">1989</span>
                     </div>
                     <div class="info">サムスン電子ジャパン設立<br>(神田須田町オフィス）</div>
                 </div>
                 <div class="slide_item"> 
                     <div class="slide_img">
-                        <img src="../../resources/img/sub/img_history_slide4.jpg">
+                        <img src="../../resources/img/sub/img_history_slide4.jpg" alt="1975 沿革 image" title="1975 沿革 image">
                         <span class="num">1975</span>
                     </div>
                     <div class="info">サムスンジャパン設立<br>(当時の業務風景）</div>
                 </div>
                 <div class="slide_item"> 
                     <div class="slide_img">
-                        <img src="../../resources/img/sub/img_history_slide5.jpg">
+                        <img src="../../resources/img/sub/img_history_slide5.jpg" alt="1953 沿革 image" title="1953 沿革 image">
                         <span class="num">1953</span>
                     </div>
                     <div class="info">サムスン物産 東京支店開設 <br>(日本橋堀留町）</div>
