--- a/html/about-us/office-locations.html
+++ b/html/about-us/office-locations.html
@@ -41,7 +41,7 @@
     <!-- [E] header -->
 
     <div class="contents sub">    
-        <section class="sub_cont sub_title">                 
+        <section class="sub_cont sub_title" data-aos="fade" data-aos-duration="2000">   
             <div class="breadcrumbs" role="navigation">
                 <ol>
                     <li>
@@ -65,7 +65,7 @@
                 <b>最寄駅</b>
                 JR 品川駅 港南口 よりスカイウェイにて直結 徒歩 <br class="mobile" />3 分 <br />京浜急行 品川駅より 徒歩 6 分
             </p>
-            <img src="../../resources/img/sub/img_locations_bg.jpg">
+            <img src="../../resources/img/sub/img_locations_bg.jpg" alt="locations background image" title="locations background image">
         </section>             
         <section class="sub_cont locations" data-aos="fade-up" data-aos-delay="300">
             <b>大阪 支店</b>
