--- a/html/about-us/presidents-message.html
+++ b/html/about-us/presidents-message.html
@@ -41,7 +41,7 @@
     <!-- [E] header -->
 
     <div class="contents sub">        
-        <section class="sub_cont sub_title">     
+        <section class="sub_cont sub_title"  data-aos="fade" data-aos-duration="2000">     
             <div class="breadcrumbs" role="navigation">
                 <ol>
                     <li>
