--- a/html/about-us/vision.html
+++ b/html/about-us/vision.html
@@ -41,7 +41,7 @@
     <!-- [E] header -->
 
     <div class="contents sub">
-        <section class="sub_cont sub_title">    
+        <section class="sub_cont sub_title" data-aos="fade" data-aos-duration="2000">    
             <div class="breadcrumbs" role="navigation">
                 <ol>
                     <li>
@@ -56,9 +56,10 @@
                 </ol>
             </div>
             <h2 class="title">Vision</h2>
+            <span class="sub">&nbsp;</span>
         </section>
         <section class="sub_cont sub_img">
-            <img src="../../resources/img/sub/img_vision_bg.jpg" alt="Vision background image">
+            <img src="../../resources/img/sub/img_vision_bg.jpg" alt="Vision background image" title="Vision background image" />
             <div>
                 <b>Global Value <br class="mobile">Creating Company</b>
                 <p>トレーディングと環境にやさしい <br class="mobile">事業開発を通して <br class="mobile"> 社会に寄与していきます。</p>
