--- a/html/footer.html
+++ b/html/footer.html
@@ -10,16 +10,16 @@
                     <li><a href="/html/about-us/presidents-message.html">社長メッセージ</a></li>
                     <li><a href="/html/about-us/history.html">沿革</a></li>
                     <li><a href="/html/about-us/office-locations.html">アクセス</a></li>
-                    <li><a href="/html/about-us/contact-info.html">お問い合わせ</a></li>
+                    <li><a href="/html/about-us/contact-info1.html">お問い合わせ</a></li>
                 </ul>
             </li>
             <li class="depth1">
                 <b>事業紹介</b>
                 <ul class="depth2">
-                    <li><a href="">化学</a></li>
-                    <li><a href="">鉄鋼</a></li>
-                    <li><a href="">素材</a></li>
-                    <li><a href="">エネルギー</a></li>
+                    <li><a href="/html/business/chemicals.html">化学</a></li>
+                    <li><a href="/html/business/steel.html">鉄鋼</a></li>
+                    <li><a href="/html/business/industrial-materials.html">素材</a></li>
+                    <li><a href="/html/business/energy.html">エネルギー</a></li>
                 </ul>
             </li>
             <li class="depth1">
@@ -61,7 +61,7 @@
         </div>
     </div>
     <div class="footer_bottom">
-        <img src="/resources/img/common/icon_logo_white.svg">
+        <img src="/resources/img/common/icon_logo_white.svg" alt="Samsung C&T Japan logo" title="Samsung C&T Japan logo" />
         <p class="copylight">Copyright (c) Samsung C&T Japan Corporation. All Rights Reserved.</p>
     </div>
 </div>
