--- a/html/header.html
+++ b/html/header.html
@@ -1,10 +1,10 @@
 
 <div class="header_top">
     <ul>
-        <li><a href="">日本語</a></li>
-        <li><a href="">English</a ></li> 
-        <li><a href="">SAMSUNG C&T</a></li>
-        <li class="web"><a href="">GLOBAL NETWORK</a></li>
+        <li><a href="/html/main.html">日本語</a></li>
+        <li><a href="/html/en/main.html">English</a ></li> 
+        <li><a href="https://trading.samsungcnt.com/eng/main.do">SAMSUNG C&T</a></li>
+        <li class="web"><a href="https://trading.samsungcnt.com/eng/company/globalnetwork.do">GLOBAL NETWORK</a></li>
     </ul>
 </div>
 <nav class="gnb web">            
@@ -26,7 +26,7 @@
     <div class="gnb_sub">
         <button type="button" class="icon icon_close" onclick="toggleMenuWeb('close')">CLOSE</button>
         <div data-gnb="1">
-            <div class="img">
+            <div class="img none">
                 <span>会社情報</span>
             </div>
             <ul>
@@ -36,22 +36,22 @@
                 <li><a href="/html/about-us/presidents-message.html">社長メッセージ</a></li>
                 <li><a href="/html/about-us/history.html">沿革</a></li>
                 <li><a href="/html/about-us/office-locations.html">アクセス</a></li>
-                <li><a href="/html/about-us/contact-info.html">お問い合わせ</a></li>
+                <li><a href="/html/about-us/contact-info1.html">お問い合わせ</a></li>
             </ul>
         </div>
         <div data-gnb="2">
-            <div class="img">
+            <div class="img none">
                 <span>事業紹介</span>
             </div>
             <ul>
-                <li><a href="">化学</a></li>
-                <li><a href="">鉄鋼</a></li>
-                <li><a href="">素材</a></li>
-                <li><a href="">エネルギー</a></li>
+                <li><a href="/html/business/chemicals.html">化学</a></li>
+                <li><a href="/html/business/steel.html">鉄鋼</a></li>
+                <li><a href="/html/business/industrial-materials.html">素材</a></li>
+                <li><a href="/html/business/energy.html">エネルギー</a></li>
             </ul>
         </div>
         <div data-gnb="3">
-            <div class="img">
+            <div class="img none">
                 <span>サステナビリティ</span>
             </div>
             <ul>
@@ -61,7 +61,7 @@
             </ul>
         </div>
         <div data-gnb="4">
-            <div class="img">
+            <div class="img none">
                 <span>採用情報</span>
             </div>
             <ul>
@@ -72,7 +72,7 @@
             </ul>
         </div>
         <div data-gnb="5">
-            <div class="img">
+            <div class="img none">
                 <span>PR</span>
             </div>
             <ul>
@@ -121,7 +121,7 @@
                     <li><a href="/html/about-us/presidents-message.html">社長メッセージ</a></li>
                     <li><a href="/html/about-us/history.html">沿革</a></li>
                     <li><a href="/html/about-us/office-locations.html">アクセス</a></li>
-                    <li><a href="/html/about-us/contact-info.html">お問い合わせ</a></li>
+                    <li><a href="/html/about-us/contact-info1.html">お問い合わせ</a></li>
                 </ul>
             </li>
             <li>
@@ -130,10 +130,10 @@
                     <button type="button" class="icon icon_toggle">menu_close</button>
                 </div>
                 <ul class="depth2">
-                    <li><a href="">化学</a></li>
-                    <li><a href="">鉄鋼</a></li>
-                    <li><a href="">素材</a></li>
-                    <li><a href="">エネルギー</a></li>
+                    <li><a href="/html/business/chemicals.html">化学</a></li>
+                    <li><a href="/html/business/steel.html">鉄鋼</a></li>
+                    <li><a href="/html/business/industrial-materials.html">素材</a></li>
+                    <li><a href="/html/business/energy.html">エネルギー</a></li>
                 </ul>
             </li>
             <li>
