--- a/html/main.html
+++ b/html/main.html
@@ -51,10 +51,10 @@
                 <div class="title">トレーディングと環境に <br class="mobile"/>やさしい<br class="web">事業開発を通して <br class="mobile"/>社会に寄与していきます。</div>
                 <div class="sub">グローバル市場にて、産業における専門性<br class="mobile"/>に基づき、市場の変化に対応し、<br class="web">付加価値<br class="mobile"/>を生み出すことで、顧客により良い価値を<br class="mobile"/>提供していきます。</div>
                 <ul>
-                    <li><div class="icon"><img src="/resources/img/main/icon_info1.png" alt="" title="" /></div>会社概要</li>
-                    <li><div class="icon"><img src="/resources/img/main/icon_info2.png" alt="" title="" /></div>企業理念</li>
-                    <li><div class="icon"><img src="/resources/img/main/icon_info3.png" alt="" title="" /></div>社長メッセージ</li>
-                    <li><div class="icon"><img src="/resources/img/main/icon_info4.png" alt="" title="" /></div>沿革</li>
+                    <li><div class="icon"><img src="/resources/img/main/icon_info1.png" alt="会社概要 icon" title="会社概要 icon" /></div>会社概要</li>
+                    <li><div class="icon"><img src="/resources/img/main/icon_info2.png" alt="企業理念 icon" title="企業理念 icon" /></div>企業理念</li>
+                    <li><div class="icon"><img src="/resources/img/main/icon_info3.png" alt="社長メッセージ icon" title="社長メッセージ icon" /></div>社長メッセージ</li>
+                    <li><div class="icon"><img src="/resources/img/main/icon_info4.png" alt="沿革 icon" title="沿革 icon" /></div>沿革</li>
                 </ul>
             </div>
             
