--- a/html/utils/color.html
+++ b/html/utils/color.html
@@ -39,6 +39,12 @@
       </li>
       <li>
         <span></span>
+        <span class="color"><em style="background-color:#000"></em></span>
+        <span class="name">#000000</span>
+        <span class="usage">var(--black)</span>
+      </li>
+      <li>
+        <span></span>
         <span class="color"><em style="background-color:#004098"></em></span>
         <span class="name">#004098</span>
         <span class="usage">var(--basic_blue)</span>
@@ -63,15 +69,21 @@
       </li>
       <li>
         <span></span>
+        <span class="color"><em style="background-color:#5D626C"></em></span>
+        <span class="name">#5D626C</span>
+        <span class="usage">var(--title_grey)</span>
+      </li>
+      <li>
+        <span></span>
         <span class="color"><em style="background-color:#FF0000"></em></span>
         <span class="name">#FF0000</span>
         <span class="usage">var(--title_error)</span>
       </li>
       <li>
         <span></span>
-        <span class="color"><em style="background-color:#5D626C"></em></span>
-        <span class="name">#5D626C</span>
-        <span class="usage">var(--title_grey)</span>
+        <span class="color"><em style="background-color:#F2F6FD"></em></span>
+        <span class="name">#F2F6FD</span>
+        <span class="usage">var(--pastel_blue)</span>
       </li>
       <li>
         <span></span>
@@ -81,9 +93,33 @@
       </li>
       <li>
         <span></span>
+        <span class="color"><em style="background-color:#8C9299"></em></span>
+        <span class="name">#8C9299</span>
+        <span class="usage">var(--grey02)</span>
+      </li>
+      <li>
+        <span></span>
         <span class="color"><em style="background-color:#B3B5B9"></em></span>
         <span class="name">#B3B5B9</span>
         <span class="usage">var(--grey04)</span>
+      </li>
+      <li>
+        <span></span>
+        <span class="color"><em style="background-color:#F6F6F6"></em></span>
+        <span class="name">#F6F6F6</span>
+        <span class="usage">var(--grey05)</span>
+      </li>
+      <li>
+        <span></span>
+        <span class="color"><em style="background-color:linear-gradient(270deg, #3973D1 0%, #004098 100%);"></em></span>
+        <span class="name">linear-gradient(270deg, #3973D1 0%, #004098 100%);</span>
+        <span class="usage">var(--gradient_blue)</span>
+      </li>
+      <li>
+        <span></span>
+        <span class="color"><em style="background-color:linear-gradient(90deg, #F2F6FD -27.67%, #78A9FF 111.26%);"></em></span>
+        <span class="name">linear-gradient(90deg, #F2F6FD -27.67%, #78A9FF 111.26%);</span>
+        <span class="usage">var(--gradation_skyblue)</span>
       </li>
     </ul>
 
