--- a/html/index.html
+++ b/html/index.html
@@ -136,7 +136,7 @@
 
 <body>
     <div class="flex">
-        <span>Update : 2024-03-22</span>
+        <span>Update : 2024-03-23</span>
         <h1 class="title">상사부문 동경법인 퍼블리싱</h1>        
 
         <table class="table">
@@ -187,7 +187,7 @@
                     <td></td>
                     <td>our-philosophy</td>
                     <td><a href="/html/about-us/our-philosophy.html" target="_blank"> /html/about-us/our-philosophy.html</a></td>
-                    <td><button></button></td>
+                    <td><button class="b3"></button></td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -218,15 +218,58 @@
                 <tr>
                     <td></td>
                     <td>contact us</td>
-                    <td><a href="/html/about-us/contact-info.html" target="_blank"> /html/about-us/contact-info.html</a></td>
-                    <td><button class="b2"></button></td>
+                    <td>
+                        <a href="/html/about-us/contact-info1.html" target="_blank"> /html/about-us/contact-info1.html</a><br />
+                        <a href="/html/about-us/contact-info2.html" target="_blank"> /html/about-us/contact-info2.html</a>
+                    </td>
+                    <td><button class="b3"></button></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Business</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>chemicals</td>
+                    <td><a href="/html/business/chemicals.html" target="_blank"> /html/business/chemicals.html</a></td>
+                    <td><button class=""></button></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>steel</td>
+                    <td><a href="/html/business/steel.html" target="_blank"> /html/business/steel.html</a></td>
+                    <td><button class=""></button></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>industrial-materials</td>
+                    <td><a href="/html/business/industrial-materials.html" target="_blank"> /html/business/industrial-materials.html</a></td>
+                    <td><button class=""></button></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>energy</td>
+                    <td><a href="/html/business/energy.html" target="_blank"> /html/business/energy.html</a></td>
+                    <td><button class=""></button></td>
                     <td></td>
                     <td></td>
                 </tr>
             </tbody>
         </table>   
         
-        <!--table class="table">
+        <table class="table">
             <thead>
                 <tr>
                     <th>1Depth</th>
@@ -255,7 +298,7 @@
                     <td></td>
                 </tr>
             </tbody>
-        </!--table--> 
+        </table> 
 
     </div>
 </body>
