--- a/html/utils/utils.html
+++ b/html/utils/utils.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,10 +18,7 @@
     <script src="/resources/js/jquery.min.js"></script>    
     <script src="/resources/js/aos.js"></script>       
     <script src="/resources/js/include.js"></script>         
-    <script src="/resources/js/common.js"></script>    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <script src="/resources/js/common.js"></script>  
 
     <style>
         body {
@@ -95,12 +93,12 @@
                     <label for="radio2">text2</label>
                 </div>
 
-                <div class="c_radio">
+                <div class="c_radio disabled">
                     <input type="radio" id="radiotest0" name="radio-test1" checked disabled />
                     <label for="radiotest0">text1</label>
                 </div>
 
-                <div class="c_radio">
+                <div class="c_radio disabled">
                     <input type="radio" id="radiotest1" name="radio-test1" disabled />
                     <label for="radiotest1">text2</label>
                 </div>
@@ -222,8 +220,8 @@
     <ul class="item">
         <li>
             <div class="d_flex">
-                <div class="c_radio single">
-                    <input type="radio" id="radios1" name="radio-gruop-s" />
+                <div class="c_radio single ">
+                    <input type="radio" id="radios1" name="radio-gruop-s" checked />
                     <label for="radios1"></label>
                 </div>
 
@@ -347,7 +345,7 @@
         </li>
     </ul>
 
-    <h2>Checkbox</h2>
+    <!--h2>Checkbox</h2>
     <ul class="item">
         <li>
             <div class="d_flex">
@@ -414,7 +412,7 @@
             </div>
         </li>
     </ul>
-    <ul class="item">
+    <ul-- class="item">
         <li>
             <div class="d_flex">
                 <div class="c_check single">
@@ -479,7 +477,7 @@
                 </tbody></table>
             </div>
         </li>
-    </ul>
+    </ul-->
 
     <h2>Input</h2>
     <ul class="item">
@@ -609,11 +607,11 @@
         <h3>Error</h3>
         <!-- Error -->
         <div class="c_text error">
-            <label class="c_label">
-            <input  class="c_txt-input" type="text" placeholder="placeholder">
+                <label class="c_label">
+                <input  class="c_txt-input" type="text" placeholder="placeholder">
             </label>
-            <p class="error__text">Error description</p>
         </div>
+        <p class="c_error_text" style="display: block;">Error description</p>
         </li>
         <li>
         <div class="colorscripter-code" style="color: #f0f0f0; font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace !important; position: relative !important; overflow: auto">
@@ -652,7 +650,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #f0f0f0">/</span><span style="color: #ff3399">label</span><span style="color: #f0f0f0">&gt;</span>
                     </div>
                     <div style="padding: 0 6px; white-space: pre; line-height: 130%">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">p</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"error__text"</span><span style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>Error&nbsp;description<span style="color: #f0f0f0">&lt;</span><span style="color: #f0f0f0">/</span><span style="color: #ff3399">p</span><span style="color: #f0f0f0">&gt;</span>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">p</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_error_text"</span><span style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>Error&nbsp;description<span style="color: #f0f0f0">&lt;</span><span style="color: #f0f0f0">/</span><span style="color: #ff3399">p</span><span style="color: #f0f0f0">&gt;</span>
                     </div>
                     <div style="background-color: #303030; padding: 0 6px; white-space: pre; line-height: 130%">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #f0f0f0">/</span><span style="color: #ff3399">div</span><span style="color: #f0f0f0">&gt;</span>
@@ -802,8 +800,8 @@
             <label class="c_label textarea">
               <textarea placeholder="placeholder"></textarea>
             </label>
-            <p class="error__text">Error description</p>
-          </div>
+            </div>
+        <p class="c_error_text" style="display: block;">Error description</p>
         </li>
         <li>
           <div class="colorscripter-code" style="color: #f0f0f0; font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace !important; position: relative !important; overflow: auto">
@@ -842,7 +840,7 @@
                       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #f0f0f0">/</span><span style="color: #ff3399">label</span><span style="color: #f0f0f0">&gt;</span>
                     </div>
                     <div style="padding: 0 6px; white-space: pre; line-height: 130%">
-                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">p</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"error__text"</span><span style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>Error&nbsp;description<span style="color: #f0f0f0">&lt;</span><span style="color: #f0f0f0">/</span><span style="color: #ff3399">p</span><span style="color: #f0f0f0">&gt;</span>
+                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">p</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_error_text"</span><span style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>Error&nbsp;description<span style="color: #f0f0f0">&lt;</span><span style="color: #f0f0f0">/</span><span style="color: #ff3399">p</span><span style="color: #f0f0f0">&gt;</span>
                     </div>
                     <div style="background-color: #303030; padding: 0 6px; white-space: pre; line-height: 130%">
                       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #f0f0f0">/</span><span style="color: #ff3399">div</span><span style="color: #f0f0f0">&gt;</span>
@@ -864,7 +862,7 @@
 
 
 
-    <h2>Dropdown</h2>
+    <!--h2>Dropdown</h2>
     <ul>
         <li>
             <div class="dropdown w_200">
@@ -934,6 +932,44 @@
             </div>
         </li>         
     </ul>
+<!-- Code injected by live-server -->
+<script>
+	// <![CDATA[  <-- For SVG support
+	if ('WebSocket' in window) {
+		(function () {
+			function refreshCSS() {
+				var sheets = [].slice.call(document.getElementsByTagName("link"));
+				var head = document.getElementsByTagName("head")[0];
+				for (var i = 0; i < sheets.length; ++i) {
+					var elem = sheets[i];
+					var parent = elem.parentElement || head;
+					parent.removeChild(elem);
+					var rel = elem.rel;
+					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+					}
+					parent.appendChild(elem);
+				}
+			}
+			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+			var address = protocol + window.location.host + window.location.pathname + '/ws';
+			var socket = new WebSocket(address);
+			socket.onmessage = function (msg) {
+				if (msg.data == 'reload') window.location.reload();
+				else if (msg.data == 'refreshcss') refreshCSS();
+			};
+			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+				console.log('Live reload enabled.');
+				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+			}
+		})();
+	}
+	else {
+		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+	}
+	// ]]>
+</script>
 </body>
 
 </html>
